# gmx_tools

./: Dockerfile  README.md  build_docker.sh  entrypoint.sh  environment.yml  pyproject.toml
dev/: GLD.rtp
examples/GLD_forcefield/1_modify_cgenff/: cgenff_uaa.sh  residue_modification.xlsx
examples/GLD_forcefield/1_modify_cgenff/cgenff_asg/charmm36.ff/: 3_G.rtp
examples/GLD_forcefield/2_merge_uaa/: reindex.sh
examples/GLD_forcefield/3_run_md_simulation/analysis/: md.xtc
examples/GLD_forcefield/3_run_md_simulation/md/: boxed.gro  em.gro  ionized.gro  npt.cpt  npt.edr  nvt.edr  posre.itp  script_md.sh
examples/GLD_forcefield/3_run_md_simulation/md/charmm36.ff/: ffbonded.itp
examples/GLD_forcefield/3_run_md_simulation/md/mdps/: em.mdp  ions.mdp  md.mdp
examples/GLD_forcefield/3_run_md_simulation/md/mdps_test/: nvt.mdp
src/gmx_tools/: main.py  reindex_pdb.py  unnatural_aminoacid_ff_builder_cgenff.py
tests/: test.ipynb
tutorials/GLD_forcefield/: README.md
tutorials/GLD_forcefield/1_modify_cgenff/: cgenff_uaa.sh
tutorials/GLD_forcefield/1_modify_cgenff/cgenff_gld/: 3_GLD_analog_gmx.top
tutorials/GLD_forcefield/1_modify_cgenff/cgenff_gld/charmm36.ff/: 3_G.rtp  merged.rtp
tutorials/GLD_forcefield/3_run_md_simulation/analysis/: #protein.pdb.3#  #protein_init.pdb.1#  #protein_init.pdb.2#  index.ndx
tutorials/GLD_forcefield/3_run_md_simulation/md/: 1_prep.sh  2_md.sh  em.edr  md.cpt  md.edr  md.trr  mdout.mdp  npt.xtc  nvt.cpt  nvt.xtc  processed.gro  script_prep.sh  solvated.gro  topol.top
(+14 files in other folders)
