[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmx_tools"
version = "0.0.1"
description = "A collection of scripts to facilitate GROMACS simulations"
readme = "README.md"
authors = [{ name = "Seungpyo Hong", email = "seungpyo.hong@jbnu.ac.kr" }]
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
gmx_tools = "gmx_tools.main:main"
modify_cgenff_for_uaa = "gmx_tools.unnatural_aminoacid_ff_builder_cgenff:main"
reindex_pdb ="gmx_tools.reindex_pdb:main"